--- a/config/typus/company.yml
+++ b/config/typus/company.yml
@@ -2,6 +2,6 @@
 
 Company:
   fields:
-    default: name_list, phone, address, segment_list, product_list, plus
-    csv: name_list, phone, segment_list, product_list
+    default: name, phone, address, segments, products, plus
+    csv: name, phone, segments, products
   application: Sirva.me
