add username to typus

--- a/config/typus/typus.yml
+++ b/config/typus/typus.yml
@@ -1,7 +1,7 @@
 Company:
   fields:
-    default: name, phone, address, segments, products, plus
-    csv: name, phone, segments, products
+    default: name, phone, address, segments, products, username, plus
+    csv: name, phone, segments, products, username, plus
     options:
       booleans:
         plus: Active, Inactive
