--- a/config/database.yml
+++ b/config/database.yml
@@ -6,15 +6,19 @@ commom: &commom
 development:
   <<: *commom
   database: sirvame_development
+  password: 123qwe
 
 test:
   <<: *commom
   database: sirvame_test
+  password: 123qwe
 
 production:
   <<: *commom
   database: sirvame_production
+  password: expira90
 
 staging:
   <<: *commom
   database: sirvame_staging
+  password: expira90
