--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 /log/*.log
 /tmp
 
+/config/database.yml
 /config/environment_variables.rb
+/config/mypg.yml
+/config/shuttle.yml
 /public/assets
 /vendor
